--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/02-select/_select.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/02-select/_select.scss
@@ -35,7 +35,7 @@ optgroup:empty{
 	max-width: 250px;
 }
 body .select2-container{
-	@include spacer(0);
+	margin-bottom: 0;
 }
 
 /* SINGLE SELECT 2
