--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
@@ -7,7 +7,7 @@
 	@include auto;
 	form{
 		& > .js-form-item{
-			margin-bottom: 1em;
+			margin-bottom: $spaceSm;
 			label{
 				margin-bottom: .25em;
 				display: inline-block;
