--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/_video.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/video/_video.scss
@@ -10,7 +10,7 @@
 	.field-oc-long-text{
 		max-width: $textMax;
 		@include auto;
-		margin-top: 1em;
+		margin-top: $spaceSm;
 	}
 }//end video widget
 
