--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-views/_global-views.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-views/_global-views.scss
@@ -5,17 +5,17 @@
 .view{
 	.item-list > ul{
 		@include listReset;
-		li{
+		& > li{
 			width: 100%;
 			&:not(:last-child){
-				@include spacer(1.5);
+				margin-bottom: $spaceMd;
 			}
 		}
 	}
 	.views-row{
 		width: 100%;
 		&:not(:last-child){
-			@include spacer(1.5);
+			margin-bottom: $spaceMd;
 		}
 	}
 }//end view
