--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
@@ -4,7 +4,7 @@
 .node-page.node-content{
 	
 	.block-field-banner{
-		@include spacer(2);
+		margin-bottom: $spaceLg;
 	}
 	.block-field.block-title{
 		@include centerTitle;
