--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/event/_event.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/event/_event.scss
@@ -6,14 +6,14 @@
 	.node-section#section-2{
 		.layout__region--content{
 			@include textContent;
-			@include spacer(2);
+			margin-bottom: $spaceLg;
 			@include safeFlex(row,wrap,center,null);
 		}
 	}
 	.block-field-banner{
 		width: 350px;
 		@include onlySmall{
-			@include spacer(1.5);
+			margin-bottom: $spaceMd;
 		}
 	}
 	.block-field.block-title{
@@ -27,7 +27,7 @@
 			}
 		}
 		h1{
-			@include spacer(.25);
+			margin-bottom: .25em;
 		}
 		.metatext{
 			@include textDate;
@@ -35,7 +35,7 @@
 	}
 	.block-field-event-location{
 		@include textContent;
-		@include spacer(2);
+		margin-bottom: $spaceLg;
 		//hide long/lat title
 		.geolocation-google-map{
 			.location-title{
