--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
@@ -7,7 +7,7 @@
 	.block-field-banner{
 		opacity: 0;
 		@include animation('fadeIn 1.2s 1 forwards');
-		@include spacer(2);
+		margin-bottom: $spaceLg;
 	}
 	.block-field.block-title{
 		@include centerTitle;
