--- a/web/themes/oc_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/03-lists/_lists.scss
@@ -6,10 +6,10 @@
 	ul,ol {
 		//overflow hidden is needed for lists next to floated elements
 		overflow: hidden;
-		margin: .5em 0 1.5em;
+		margin: $spaceXs 0 $spaceMd;
 		padding: 0 0 0 30px;
 		ul,ol{
-			margin: .5em 0 .5em;
+			margin: $spaceXs 0;
 			padding: 0 0 0 20px;
 		}
 	}
