--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
@@ -56,7 +56,7 @@
 	position: relative;
 	display: block;
 	margin: 0 auto;
-	margin-bottom: 1.5em;
+	margin-bottom: $spaceMd;
 }
 
 //outlineButtons
