--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/menu/_footer-menu.scss
@@ -4,7 +4,7 @@
 
 .block-footer-menu{
 	width: 100%;
-	margin-bottom: 1.5em;
+	margin-bottom: $spaceMd;
 	@include tab{
 		width: 50%;
 		@include safeFlexOrder(2);
