--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -5,7 +5,7 @@
 .breadcrumb{
 	max-width: $contentStop;
 	@include auto;
-	padding: 10px 20px 20px;
+	padding: $spaceXs $siteMarginMobile $spaceSm;
 	ol {
 		@include listReset;
 	}
