--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_styleguide-specific.scss
@@ -13,7 +13,7 @@ $plBorder: #333333;
 
 .pl {
 	.sg-main{
-		padding-top: 2em;
+		padding-top: $spaceLg;
 	}
 
 	//section links
@@ -23,12 +23,7 @@ $plBorder: #333333;
 	}
 
 	.visually-hidden {
-		position: absolute !important;
-		clip: rect(1px, 1px, 1px, 1px);
-		overflow: hidden;
-		height: 1px;
-		width: 1px;
-		word-wrap: normal;
+		@include visuallyHidden;
 	}
 
 	.sg-main{
@@ -40,7 +35,7 @@ $plBorder: #333333;
 	.sg-pattern {
 		clear: left;
 		margin-bottom: 0;
-		padding-bottom: 2em;
+		padding-bottom: $spaceLg;
 		padding-left: .5em;
 		padding-right: .5em;
 		&:not(#organisms-reveal-group){
@@ -83,27 +78,27 @@ $plBorder: #333333;
 		@include xSmaller;
 		opacity: .8;
 		font-style: italic;
-		margin-bottom: 2em;
+		margin-bottom: $spaceLg;
 	}
 
 	.flex-holder{
 		@include safeFlex(row,wrap,null,start);
 		.flex-half{
 			width: 50%;
-			padding: 0 20px;
+			padding: 0 $siteMarginMobile;
 		}
 	}
 
 	//spacer shim
 	.pl-spacer{
-		margin-top: 1em;
+		margin-top: $spaceMd;
 	}
 
 	//alerts
 	.pl-alert{
 		text-align: center;
 		max-width: 60%;
-		margin: 2em auto;
+		margin: $spaceLg auto;
 		border: 2px solid $plLink;
 		padding: 1em 2em;
 		@include onlySmall{
@@ -145,7 +140,7 @@ $plBorder: #333333;
 	display: inline-block;
 	vertical-align: top;
 	width: 100%;
-	margin-bottom: 1em;
+	margin-bottom: $spaceSm;
 	@include tab{
 		width: 30%;
 		padding-right: 2%;
@@ -157,20 +152,20 @@ $plBorder: #333333;
 ------------ */
 .pl{
 	.mixin-group:not(:first-of-type){
-		margin-top: 1.5em;
+		margin-top: $spaceMd;
 	}
 	.mixin-tile{
 		display: inline-block;
 		vertical-align: top;
 		width: 100%;
-		margin-bottom: 1em;
+		margin-bottom: $spaceSm;
 		ul{
 			@include listReset;
 			.include-tag{
 				color: $plBlue;
 			}
 			.similar{
-				margin-top: .5em;
+				margin-top: $spaceXs;
 			}
 		}
 		@include tab{
@@ -259,12 +254,12 @@ $plBorder: #333333;
 ------------------- */
 .pl{
 	.doc-section{
-		@include spacer(4);
+		margin-bottom: $spaceLg * 2;
 		.doc-section-title{
 			color: $plLink;
 			background: #dedede;
 			padding: .25em 1.5em;
-			@include spacer(2);
+			margin-bottom: $spaceLg;
 		}
 		.doc-section-inner{
 			max-width: 800px;
@@ -274,7 +269,7 @@ $plBorder: #333333;
 	ol,ul{
 		&.themed{
 			& > li{
-				@include spacer(1);
+				margin-bottom: $spaceSm;
 				padding: .5em 1em;
 				&:hover{
 					background: #efefef;
@@ -293,7 +288,7 @@ $plBorder: #333333;
 					padding-top: .5em;
 				}
 				li{
-					@include spacer(.5);
+					margin-bottom: $spaceXs;
 					a{
 						color: $plGrey;
 						&:hover,&:focus{
@@ -305,7 +300,7 @@ $plBorder: #333333;
 		}//end themed
 		&.spaced{
 			li{
-				margin-bottom: .5em;
+				margin-bottom: $spaceXs;
 			}
 		}
 	}//end ol,ul
@@ -316,7 +311,7 @@ $plBorder: #333333;
 			& > li{
 				list-style-type: none;
 				position: relative;
-				@include spacer(1.5);
+				margin-bottom: $spaceMd;
 				padding-left: 20px;
 				@include tab{
 					padding-left: 30px;
