--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/04-book-navigation/_book-navigation.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/04-book-navigation/_book-navigation.scss
@@ -3,21 +3,7 @@
 =================== */
 
 .block-book-navigation{
-	h2.block-title{
-		a{
-			color: $black;
-			&:hover,&:focus{
-				color: $link;
-				@include transAll(.3s);
-			}
-		}
-	}
-	ul{
-		@include listReset;
-		a:hover,a:focus{
-			@include transAll(.3s);
-		}
-	}
+	@extend .block--system-menu.page-menu;
 }//end book navigation
 
 
