--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--admin-view-placer.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--admin-view-placer.html.twig
@@ -45,12 +45,12 @@
 
 {# print the content without the styling fields #}
 {% block widgetContent %}
-	
+	{{ content.field_widget_title }}
 	{% set viewName = content.field_view_machine_name.0['#context'].value|clean_class %}
 	{% set displayName = content.field_display_machine_name.0['#context'].value|clean_class %}
 	<div class="view-widget {{ viewName }} {{ displayName }}">
 		{# print the content without the styling fields #}
-	    {{- content|without('field_view_machine_name','field_display_machine_name') -}}
+	    {{- viewfield -}}
 	</div>			
 {% endblock %}
 		
