Finish changing admin view placer to view placer

--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--view-placer.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--view-placer.html.twig
@@ -38,10 +38,6 @@
 #}
 
 {% extends "paragraph.html.twig" %}
-{# NOTES
-------------
-
-#}
 
 {# print the content without the styling fields #}
 {% block widgetContent %}
@@ -50,7 +46,6 @@
 	{% set displayName = content.field_display_machine_name.0['#context'].value|clean_class %}
 	<div class="view-widget {{ viewName }} {{ displayName }}">
 		{# print the content without the styling fields #}
-	    {{- viewfield -}}
+	    {{- content.field_display_machine_name -}}
 	</div>			
-{% endblock %}
-		
+{% endblock %}	
