--- a/web/themes/oc_patterns/components/_patterns/style.scss
+++ b/web/themes/oc_patterns/components/_patterns/style.scss
@@ -10,13 +10,9 @@
 
 // End libs
 
-
-
-
-//Import variables, mixins from OC Omega, base theme
-@import "../../../oc_base/src/sass/variables/**/*";
-@import "../../../oc_base/src/sass/mixins/**/*";
-
+@import "00-base/**/*/font-awesome/fontawesome.scss";
+@import "00-base/**/*/font-awesome/solid.scss";
+@import "00-base/**/*/font-awesome/brands.scss";
 @import "00-base/**/*.scss";
 @import "01-atoms/**/*.scss";
 @import "02-molecules/**/*.scss";
