--- a/web/themes/oc_patterns/templates/field/image.html.twig
+++ b/web/themes/oc_patterns/templates/field/image.html.twig
@@ -10,4 +10,9 @@
  * @see template_preprocess_image()
  */
 #}
-<img{{ attributes }} />
+{%
+set classes = [
+  style_name ? 'image-style-' ~ style_name|clean_class,
+]
+%}
+<img{{ attributes.addClass(classes) }} />
