Remove empty layout regions when no content

--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layouts.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/layout-builder/_layouts.scss
@@ -17,9 +17,11 @@
 	.layout__region--content{
 		width: 100%;
 		@include deskMenu{
-			@include calc(width, "100% - 320px");
-			&:not(.ui-sortable){
-				padding-left: 60px;
+			&:not(:only-child){
+				@include calc(width, "100% - 320px");
+				&:not(.ui-sortable){
+					padding-left: 60px;
+				}
 			}
 		}
 	}
