--- a/web/modules/custom/oc_custom/css/custom-global.css
+++ b/web/modules/custom/oc_custom/css/custom-global.css
@@ -149,7 +149,7 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 }
 
 /* eb select button */
-.eb-media .entity-browser-form > .form-actions{
+.entity-browser-form > .form-actions{
 	position: fixed;
 	bottom: 0;
 	left: 0;
